# FlashCards_Django

./: .gitignore  README.md  pyproject.toml
flashCards/: docker-compose.yml  manage.py  package-lock.json  package.json  tailwind.config.js
flashCards/flashCards/: asgi.py  settings.py  urls.py  wsgi.py
flashCards/flashCards_auth/: adapters.py  apps.py  forms.py  urls.py  views.py
flashCards/flashCards_auth/templates/flashCards_auth/: base_auth.html  login.html  password_reset.html  password_reset_complete.html  password_reset_confirmation.html  password_reset_done.html  register.html
flashCards/flashCards_auth/templates/flashCards_auth/emails/: reset_password.html  reset_password_subject.txt
flashCards/flashcards_app/: apps.py  context_processors.py  forms.py  models.py  urls.py  views.py
flashCards/flashcards_app/migrations/: 0001_initial.py  0002_alter_card_collection.py  0003_add_deck.py  0004_required_fields.py
flashCards/flashcards_app/static/flashcards_app/css/: input.css  output.css
flashCards/flashcards_app/templates/flashcards_app/: base.html  base_flashcards_app.html  card_create.html  card_delete.html  card_update.html  cards.html  cards_reverse.html  collection_create.html  collection_delete.html  collection_update.html  collections.html  deck_create.html  deck_delete.html  deck_update.html  decks.html  index.html
flashCards/flashcards_app/templatetags/: ui_tags.py
flashCards/staticfiles_collected/flashcards_app/css/: output.css  style.css
